Add support for multiple artifact trees
